2018-01-29    <cerebrum@cleomedes.uit.no>

	* OrgLdif.py (OrgLdifUitMixin.update_org_object_entry): updated o and eduOrgLegalName attributes
	(OrgLdifUitMixin.generate_org_object): updated o and eduOrgLegalName attributes

2017-11-24    <cerebrum@cleomedes.uit.no>

	* bofhd_uit_cmds.py (BofhdExtension.user_history_filtered): this
	function was unable to return a string on the right format. the
	join() function did not work as intended on the list containing
	all the dicts holding changelog info. rewrote the function to
	return a single string as it should be
	(BofhdExtension._format_from_cl): val does not have a .date
	field. returning val instead

2017-11-08    <cerebrum@cleomedes.uit.no>

	* access_FS.py (studieprog_xml_parser): Added this function to
	override similar function in no tree. this to make
	ad_export_autogroups_undervisning run withouth failure

2017-20-12	Håvard <cerebrum@cleomedes.uit.no>

        * bofhd_uit_cmds.py: Added user_history_filtered command from our old fork.

2017-10-02    <cerebrum@cleomedes.uit.no>

	* Constants.py (Constants): added constant to identify new students

2017-09-20  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py (create_dist_lists): Minor tidy-up of how things are logged when location info is missing or unrecognized.

2017-09-19    <cerebrum@cleomedes.uit.no>

	* Constants.py (Constants): added trait for primary accounts. used
	by brukerinfo

2017-09-15  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py: Comparison of words that contain norwegian letters should now be correct.

2017-08-07  Karen   <cerebrum@metius.uit.no>

    * Constants.py: Updated affiliation_status_timelonnet_fast and affiliation_status_timelonnet_midlertidig
    so that they don't have norwegian character in their status string.

2017-07-20    <cerebrum@cleomedes.uit.no-cleomedes>

	* Stedkode.py (StedkodeMixin.find_by_perspective_old): Added try/catch functionality to make the program finish even if some names are missing
